hphp/hack/test/typecheck/references/refs_in_array/foreach1.php.exp
File "foreach1.php", line 5, characters 18-20:
Cannot take references to array elements. (Typing[4225])
