hphp/hack/test/typecheck/references/refs_in_array/foreach1.php
<?hh // strict

function test(): void {
  $x = array();
  foreach ($x as &$v) {
  }
}
